[tool.poetry]
name = "radio-embed-p"
version = "0.1.0-alpha.0"
description = "radio-embed parallel"
authors = ["ffreemt"]
license = "MIT"
readme = "README1.md"
repository = "https://github.com/ffreemt/radio-embed-p"

[tool.poetry.dependencies]
python = "^3.8.3"
logzero = "^1.7.0"
set-loglevel = "^0.1.2"
typer = "^0.4.1"
icecream = "^2.1.1"
install = "^1.3.5"
more-itertools = "^8.14.0"
about-time = "^3.1.1"
hf-model-s-cpu = "^0.1.1"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test or poetry run poe test"
test = "pytest tests"
pyright = "pyright radio_embed_p"
flake8 = "flake8 radio_embed_p --ignore F401,E501,F841"
check = ["pyright", "flake8"]
export = "poetry export --without-hashes -f requirements.txt -o requirements.txt"
build = "poetry build"
publish = "poetry publish"
release = ["test", "build", "publish"]
lint = { cmd = "pylint radio_embed_p" }
isort = "isort tests radio_embed_p"
black = "black tests radio_embed_p"
format = ["isort", "black"]
docstyle = "pydocstyle --convention=google tests radio_embed_p"
prerelease = {cmd = "poetry version prerelease && sync-version"}
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^3.9.2"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.14.2"
pyright = "^1.1.254"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"
joblib = "^1.1.0"

[tool.poetry.scripts]
"radio-embed-p" = "radio_embed_p.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 0

[tool.isort]
profile = "black"
multi_line_output = 3
